@@ -16,6 +16,7 @@ P1 <- ggplot(Data_1_KMT_No, aes("Metaphase #1", KMTs_per_kinetochore)) +
 P1<- P1 + geom_boxplot(data = Data_2_KMT_No, aes("Metaphase #2", KMTs_per_kinetochore), fill = "grey30", color = "black")
 P1<- P1 + geom_boxplot(data = Data_3_KMT_No, aes("Metaphase #3", KMTs_per_kinetochore), fill = "grey40", color = "black")
 All_KMT_No <- rbind(Data_1_KMT_No, Data_2_KMT_No, Data_3_KMT_No)
+
 P1<- P1 + geom_boxplot(data = All_KMT_No, aes("Avg.", KMTs_per_kinetochore), fill = "darkred", color = "black", outlier.alpha = 0) + 
   geom_jitter(data = All_KMT_No, aes("Avg.", KMTs_per_kinetochore), alpha = 0.1, size = 1, width = 0.25)
 
@@ -33,6 +34,33 @@ All_LD <- rbind(Data_1_LD, Data_2_LD, Data_3_LD)
 P2 <- P2  + geom_density(data = All_LD, aes(length), kernel = "gaussian", size = 1, color = "darkred", linetype = "solid")
 print(P2)
 
+P2.1 <- ggplot(Data_1_LD, aes("Metaphase #1", length)) + geom_violin(draw_quantiles = c(0.25, 0.5, 0.75), fill = "grey20", color = "black") + theme_classic() +
+   ylab("KMT lengths [um]") + ylim(0,10)
+P2.1 <- P2.1  + geom_violin(data = Data_2_LD, aes("Metaphase #2", length), draw_quantiles = c(0.25, 0.5, 0.75), fill = "grey30", color = "black")
+P2.1 <- P2.1  + geom_violin(data = Data_3_LD, aes("Metaphase #3", length), draw_quantiles = c(0.25, 0.5, 0.75), fill = "grey40", color = "black")
+P2.1 <- P2.1  + geom_violin(data = All_LD, aes("Average", length), draw_quantiles = c(0.25, 0.5, 0.75), fill = "darkred", color = "black")
+
+for(i in 1:numfiles){
+  assign(paste("Data_", i, "_LD", sep = ""),
+         data.frame(Data = as.factor(paste("Metaphase #", i, sep = "")),
+                    get(paste("Data_", i, "_LD", sep = ""))))
+}
+print(P2.1)
+
+t <- data.frame(Pole = "Pole")
+t <- All_LD %>% filter(Uni_Model == "100%")
+t2 <- All_LD %>% filter(Uni_Model == "50%")
+t3 <- All_LD %>% filter(Uni_Model == "25%")
+t <- data.frame(Data = "100%",
+                t)
+t2 <- data.frame(Data = "50%",
+                 t2)
+t3 <- data.frame(Data = "25%",
+                 t3)
+t <- rbind(t,t2,t3)
+
+ggscatter(t, x = "length", y = "minus_dist_to_pole",
+            color = "Data", palette = "jco", add = "reg.line", conf.int = TRUE, alpha = 0.1) 
 ggsave(file="LD.svg", plot = P2)
 
 # Minus end distribution --------------------------------------------------------------------------------------------------
@@ -41,9 +69,9 @@ All_KMT_Minus_Ends <- rbind(Data_1_KMT_Minus_Ends, Data_2_KMT_Minus_Ends, Data_3
 
 P2.1 <- ggplot(Data_1_KMT_Minus_Ends, aes(Relative_minus_position, minus_dist_to_pole)) + geom_smooth(method = "loess", linetype = "dashed", color = "black", se = F) + 
   theme_classic() + xlab("KMT Relative Position") + ylab("KMT minus-end distance from the pole") + xlim(-0.2, 1)
-P2.1 <- P2.1 + geom_smooth(data = Data_2_KMT_Minus_Ends, aes(Relative_minus_position, minus_dist_to_pole), linetype = "dotdash", color = "black", se = F)
-P2.1 <- P2.1 + geom_smooth( data = Data_3_KMT_Minus_Ends, aes(Relative_minus_position, minus_dist_to_pole), linetype = "dotdash", color = "black", se = F)
-P2.1 <- P2.1 + geom_smooth( data = All_KMT_Minus_Ends, aes(Relative_minus_position, minus_dist_to_pole), linetype = "solid", color = "darkred")
+P2.1 <- P2.1 + geom_smooth(data = Data_2_KMT_Minus_Ends, aes(Relative_minus_position, minus_dist_to_pole), linetype = "dotdash", color = "black", se = F,  method = 'loess')
+P2.1 <- P2.1 + geom_smooth( data = Data_3_KMT_Minus_Ends, aes(Relative_minus_position, minus_dist_to_pole), linetype = "dotdash", color = "black", se = F,  method = 'loess')
+P2.1 <- P2.1 + geom_smooth( data = All_KMT_Minus_Ends, aes(Relative_minus_position, minus_dist_to_pole), linetype = "solid", color = "darkred",  method = 'loess')
 print(P2.1)
 
 # Total curvature  --------------------------------------------------------------------------------------------------------
@@ -58,6 +86,7 @@ P3 <- P3 + geom_density(data = All_T_Curv, aes(Curvature), kernel = "gaussian", 
 
 print(P3)
 
+
 ggsave(file="Total_curv.svg", plot = P3)
 
 P3 <- ggplot(Data_1_KMT_Total_Curv, aes(`KMTs length`, Curvature)) + geom_smooth(method = 'loess', size = 1, color = "black", linetype = "dashed", se = F) + theme_classic() +
@@ -65,7 +94,7 @@ P3 <- ggplot(Data_1_KMT_Total_Curv, aes(`KMTs length`, Curvature)) + geom_smooth
 P3 <- P3 + geom_smooth(data = Data_2_KMT_Total_Curv, aes(`KMTs length`, Curvature), method = 'loess', size = 1, color = "black", linetype = "dotdash", se = F) 
 P3 <- P3 + geom_smooth(data = Data_3_KMT_Total_Curv, aes(`KMTs length`, Curvature), method = 'loess', size = 1, color = "black", linetype = "dotted", se = F) 
 All_T_Curv <- rbind(Data_1_KMT_Total_Curv, Data_2_KMT_Total_Curv, Data_3_KMT_Total_Curv)
-P3 <- P3 + geom_smooth(data = All_T_Curv, aes(`KMTs length`, Curvature), method = 'loess', size = 1, color = "darkred", linetype = "solid")
+P3 <- P3 + geom_smooth(data = All_T_Curv, aes(`KMTs length`, Curvature), method = 'loess', size = 1, color = "darkred", linetype = "solid") + stat_cor()
 
 print(P3)
 
@@ -122,13 +151,24 @@ names(LC_bin_All)[2] <- "SD"
 names(LC_bin_All)[3] <- "Relative_Position"
 
 P4 <- ggplot(Data_1_KMT_Local_Curv, aes(Relative_Position, Curvature)) + geom_smooth(method = "gam", color = "black", se = FALSE, linetype = "dashed") + theme_classic() +
-  xlab("KMT Relative Position") + ylab("KMT Curvature ratio") + xlim(-0.2, 1) 
+  xlab("KMT Relative Position") + ylab("KMT Curvature ratio") + xlim(-0.2, 1) + ylim(1,1.02)
 P4 <- P4 + geom_smooth(data = Data_2_KMT_Local_Curv, aes(Relative_Position, Curvature), color = "black", se = FALSE, linetype = "dotdash")
-P4 <- P4 + geom_smooth(data = Data_2_KMT_Local_Curv, aes(Relative_Position, Curvature), color = "black", se = FALSE, linetype = "dotted")
+P4 <- P4 + geom_smooth(data = Data_3_KMT_Local_Curv, aes(Relative_Position, Curvature), color = "black", se = FALSE, linetype = "dotted")
 P4 <- P4 + geom_smooth(data = All_L_Curv, aes(Relative_Position, Curvature), color = "darkred", se = T, linetype = "solid")
+P4 <- P4 + geom_point(data = All_L_Curv, aes(Relative_Position, Curvature),  color = "darkred", alpha = 0.05)
+
 print(P4)
 
-ggsave(file="Local_curv.svg", plot = P4)
+P4 <- ggplot(LC_bin_Data_1, aes(Relative_Position, Curvature)) + geom_smooth(method = "gam", color = "black", se = FALSE, linetype = "dashed") + theme_classic() +
+  xlab("KMT Relative Position") + ylab("KMT Curvature ratio") + xlim(-0.2, 1)
+P4 <- P4 + geom_smooth(data = LC_bin_Data_2, aes(Relative_Position, Curvature), color = "black", se = FALSE, linetype = "dotdash")
+P4 <- P4 + geom_smooth(data = LC_bin_Data_3, aes(Relative_Position, Curvature), color = "black", se = FALSE, linetype = "dotted")
+P4 <- P4 + geom_smooth(data = LC_bin_All, aes(Relative_Position, Curvature), color = "darkred", se = T, linetype = "solid") + stat_cor()
+P4 <- P4 + geom_point(data = LC_bin_All, aes(Relative_Position, Curvature),  color = "darkred", alpha = 0.05)
+
+print(P4)
+
+00ggsave(file="Local_curv.svg", plot = P4)
 
 # Fiber area  ------------------------------------------------------------------------------------------------------------
 
